# waste

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: app.rs  cli.rs  error.rs  main.rs  trash.rs
src/platform/: freedesktop.rs  linux.rs  macos.rs  mod.rs  windows.rs
